crates/tla-value/src/error/snapshots/tla_value__error__tests__snapshot_argument_error.snap
---
source: crates/tla-check/src/error.rs
expression: err.to_string()
---
The first argument of + should be an integer, but instead it is:
TRUE
