crates/tla-value/src/error/snapshots/tla_value__error__tests__snapshot_choose_failed.snap
---
source: crates/tla-check/src/error.rs
expression: err.to_string()
---
CHOOSE failed: no value satisfies predicate
