crates/tla-value/src/error/snapshots/tla_value__error__tests__snapshot_evaluating_error.snap
---
source: crates/tla-check/src/error.rs
expression: err.to_string()
---
Evaluating an expression of the form Append(s, v) when s is not a sequence:
TRUE
