crates/tla-value/src/error/snapshots/tla_value__error__tests__snapshot_index_out_of_bounds.snap
---
source: crates/tla-check/src/error.rs
expression: err.to_string()
---
Sequence index out of bounds: 10 not in 1..5
