crates/tla-value/src/error/snapshots/tla_value__error__tests__snapshot_index_out_of_bounds_tlc.snap
---
source: crates/tla-check/src/error.rs
expression: err.to_string()
---
Attempted to access index 10 of tuple
<<1, 2, 3>>
which is out of bounds.
