crates/tla-value/src/error/snapshots/tla_value__error__tests__snapshot_internal_error.snap
---
source: crates/tla-check/src/error.rs
expression: err.to_string()
---
Internal error: unexpected state in evaluator
