crates/tla-value/src/error/snapshots/tla_value__error__tests__snapshot_modulus_not_positive.snap
---
source: crates/tla-check/src/error.rs
expression: err.to_string()
---
The second argument of % should be a positive number, but instead it is:
-5
