crates/tla-value/src/error/snapshots/tla_value__error__tests__snapshot_no_such_field_tlc.snap
---
source: crates/tla-check/src/error.rs
expression: err.to_string()
---
Attempted to access nonexistent field 'missingField' of record
[a |-> 1, b |-> 2]
