crates/tla-value/src/error/snapshots/tla_value__error__tests__snapshot_set_too_large.snap
---
source: crates/tla-check/src/error.rs
expression: err.to_string()
---
Set too large to enumerate (infinite or > limit)
